Retrieved textbooks for teacher dashboard from local database

--- a/wp-content/themes/walnut/walnut/index-app.html
+++ b/wp-content/themes/walnut/walnut/index-app.html
@@ -27,15 +27,29 @@
 
 	<!-- END CSS TEMPLATE -->
 
+	<link href="/dev/css/select2.css" rel="stylesheet" type="text/css"/>
+       
+
 
 </head>
 <body class="">
 
-<div>
-	<div id="header-region"></div>
-	<div id="left-nav-region"></div>
-	<div id="main-content-region"></div>
-</div>
+<div id="site_main_container" class="showAll">
+            <div>
+                <div id="header-region"></div>
+                <div class="page-container row-fluid">
+                    <div id="left-nav-region"></div>
+                    <div class="page-content">
+                        <div class="content">
+                            <div id="login-region"></div>
+                            <div id="breadcrumb-region"></div>
+                            <div id="main-content-region"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+		<div id="dialog-region"></div>
+	</div>
 
 <div id="dialog-region"></div>
 <div id="login-region"></div>
