--- a/wp-content/themes/walnut/walnut/index-app.html
+++ b/wp-content/themes/walnut/walnut/index-app.html
@@ -28,6 +28,10 @@
 	<!-- END CSS TEMPLATE -->
 
 	<link href="/dev/css/select2.css" rel="stylesheet" type="text/css"/>
+
+	<!-- VIDEO.JS -->
+	<link href="/dev/css/video-js.css" rel="stylesheet">
+
        
 
 
@@ -56,5 +60,7 @@
 
 <script type="text/javascript" data-main="/dev/js/walnut-main" src="/dev/js/plugins/require.js"></script>
 <script type="text/javascript" data-main="/dev/js/walnut-main" src="/dev/js/plugins/walnutapp-url.js"></script>
+
+<script type="text/javascript" data-main="/dev/js/walnut-main" src="/dev/js/plugins/video.js"></script>
 </body>
 </html>
