--- a/wp-content/themes/walnut/walnut/index-app.html
+++ b/wp-content/themes/walnut/walnut/index-app.html
@@ -29,6 +29,9 @@
 
 	<link href="/dev/css/select2.css" rel="stylesheet" type="text/css"/>
 
+	<!-- VIDEO -->
+	<link href="/dev/css/video-js.css" rel="stylesheet" type="text/css">
+
 
 
 </head>
