timer changes in html

--- a/HTML/miki-single.html
+++ b/HTML/miki-single.html
@@ -11,6 +11,7 @@
 	<!-- NEED TO WORK ON -->
 
 	<link href="assets/plugins/pace/pace-theme-flash.css" rel="stylesheet" type="text/css" media="screen"/>
+	<link href="assets/plugins/jquery-slider/css/jquery.sidr.light.css" rel="stylesheet" type="text/css" media="screen"/>
 	<link href="assets/plugins/boostrapv3/css/bootstrap.min.css" rel="stylesheet" type="text/css"/>
 	<link href="assets/plugins/boostrapv3/css/bootstrap-theme.min.css" rel="stylesheet" type="text/css"/>
 	<link href="assets/plugins/font-awesome/css/font-awesome.css" rel="stylesheet" type="text/css"/>
@@ -305,16 +306,32 @@
 
 					<div class="tiles white m-b-20">
 						<div class="b-grey b-b no-margin p-l-15 p-r-15 p-b-5 p-t-10">
-							<h4 class="bold pull-left text-info modName"><i class="fa fa-chevron-left"></i> <a href="#">Back to Module Name</a></h4>
+							<div class="row">
+								<div class="col-sm-4">
+									<h4 class="bold  text-info modName"><i class="fa fa-chevron-left"></i> <a href="#">Back to Module Name</a></h4>
+								</div>
 
-							<div class="modProgress pull-right">
-								<p class="bold small-text m-t-10 m-b-5">Progress</p>
-						        <div class="progress">
-						            <div data-percentage="0%" style="width: 40%;" class="progress-bar progress-bar-warning" role="progressbar" aria-valuemin="0" aria-valuemax="100"></div>
-						        </div>
-					        </div>
-					        <div class="clearfix"></div>
+								<div class="col-sm-8">
+
+									<button type="button" class="btn btn-white  action pull-right m-t-5 m-l-20"><i class="fa fa-pause"></i> Pause</button>
+
+									<div class="modProgress pull-right">
+										<p class="bold small-text m-t-10 m-b-5">Progress</p>
+						       			<div class="progress progress-large">
+						            		<div data-percentage="0%" style="width: 40%;" class="progress-bar progress-bar-warning" role="progressbar" aria-valuemin="0" aria-valuemax="100">4/10</div>
+						        		</div>
+					        		</div>
+
+							        <div class="pull-right m-r-30">
+							        	<p class="bold small-text"> Module Time</p>
+							        	<h4 class="text-grey m-t-0 m-b-0 semi-bold time"> <i class="fa fa-clock-o"></i> 12m 08s</h4>
+							        </div>
+
+					    		</div>
+					    		<div class="clearfix"></div>
+					    	</div>
 				    	</div>
+
 				    	<div class="tiles grey text-grey p-t-10 p-l-15 p-r-10 p-b-10 b-grey b-b">
 				    		<p class="bold small-text">Module Info: </p>
 				    		<p class="">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout.</p>
