--- a/HTML/miki-single.html
+++ b/HTML/miki-single.html
@@ -21,6 +21,7 @@
 	<link href="assets/css/listnav.css" rel="stylesheet" type="text/css"/>
 	<link href="assets/css/style.css" rel="stylesheet" type="text/css"/>
 	<link href="assets/css/responsive.css" rel="stylesheet" type="text/css"/>
+	<link href="assets/css/TimeCircles.css" rel="stylesheet" type="text/css"/>
 	<link href="assets/css/custom-icon-set.css" rel="stylesheet" type="text/css"/>
 	<link href="assets/css/custom.css" rel="stylesheet" type="text/css"/>
 
@@ -62,6 +63,7 @@
 		<script src="assets/plugins/bootstrap-select2/select2.min.js" type="text/javascript"></script>
 		<script type="text/javascript" src="assets/js/jquery.knob.js"></script>
 		<script type="text/javascript" src="assets/js/jquery-listnav.js"></script>
+		<script type="text/javascript" src="assets/js/TimeCircles.js"></script>
 
 	<!-- END NEED TO WORK ON -->
 
@@ -373,22 +375,20 @@
 				        </div>
 					</div>
 					<div class="tiles blue p-l-15 p-r-15">
-						<div class="tiles-body no-border">
 							<div class="row">
-				                <div class="col-md-3 col-sm-3">
-				                	<h3 class="text-white m-t-0 m-b-0 semi-bold time"> <i class="fa fa-clock-o"></i> 3m 15s</h3>
+				                <div class="col-xs-4">
+				                	<!--<h3 class="text-white m-t-0 m-b-0 semi-bold time"> <i class="fa fa-clock-o"></i> 3m 15s</h3>-->
+				                	<a href="#" class="m-t-35 hashtags transparent"> <i class="fa fa-question"></i> View Info </a>
 				                </div>
-				                <div class="col-md-3 col-sm-3 text-center">
-				                  <a href="#" class="hashtags transparent"> <i class="fa fa-question"></i> View Info </a>		                  
+				                <div class="col-xs-4 text-center">
+				                  	<div class="example" data-timer="10" style></div>                 
 				                </div>
-				                <div class="col-md-3 col-sm-3 text-center">
-				                  <a href="#" class="hashtags transparent"> <i class="fa fa-eye"></i> View Answer </a>	                  
-				                </div>
-				                <div class="col-md-3 col-sm-3 text-right">
-				                  <a href="#" class="hashtags transparent"> <i class="fa fa-check"></i> Done </a>
+
+				                <div class="col-xs-4 text-right">
+				                 <!--<a href="#" class="hashtags transparent"> <i class="fa fa-check"></i> Done </a>-->
+				                 <a href="#" class="m-t-35 hashtags transparent"> <i class="fa fa-eye"></i> View Answer </a>
 				                </div>
 				              </div>
-				          </div>
 				        </div>
 					</div>
 
@@ -599,6 +599,17 @@
 	$( ".tiles.single" ).click(function() {
 	  $( this ).toggleClass( "selected" );
 	});
+
+	$(".example").TimeCircles({
+		time: {
+		    Days: { show: false },
+		    Hours: { show: false },
+		    Minutes: { color: "#fff" },
+		    Seconds: { color: "#fff" }
+		},
+		circle_bg_color: "#fff",
+		bg_width: 0.2
+	}); 
 </script>
 </body>
 </html>
