--- a/HTML/miki-single.html
+++ b/HTML/miki-single.html
@@ -381,7 +381,7 @@
 				                	<a href="#" class="m-t-35 hashtags transparent"> <i class="fa fa-question"></i> View Info </a>
 				                </div>
 				                <div class="col-xs-4 text-center">
-				                  	<div class="example" data-timer="10" style></div>                 
+				                  	<div class="cpTimer" data-timer="9999" style></div>                 
 				                </div>
 
 				                <div class="col-xs-4 text-right">
@@ -600,7 +600,7 @@
 	  $( this ).toggleClass( "selected" );
 	});
 
-	$(".example").TimeCircles({
+	$(".cpTimer").TimeCircles({
 		time: {
 		    Days: { show: false },
 		    Hours: { show: false },
