creator sort minor style changes

--- a/HTML/sort-preview.html
+++ b/HTML/sort-preview.html
@@ -524,7 +524,7 @@
 
 <script type="text/javascript">
 
-/*// bind sort button click
+// bind sort button click
   $('#sorts').on( 'click', 'button', function() {
     var sortValue = $(this).attr('data-sort-value');
     list.isotope({ sortBy: sortValue });
@@ -620,7 +620,7 @@ list.sortable({
       })
       ;
   }
-});*/
+});
 
 </script>
 
@@ -634,7 +634,7 @@ list.sortable({
 </script>
 
 <script>
-  var $container = $('.sort');
+ /* var $container = $('.sort');
 	// init
 	$container.isotope({
 	  // options
@@ -643,7 +643,7 @@ list.sortable({
 	  getSortData: {
 	      number: '.number parseInt',
 	  }
-	});
+	});*/
 
 	// bind sort button click
   $('#sorts').on( 'click', 'button', function() {
