login screen, list of users changes, creation of sync screen

--- a/HTML/app-login.html
+++ b/HTML/app-login.html
@@ -18,6 +18,7 @@
 <link href="assets/css/style.css" rel="stylesheet" type="text/css"/>
 <link href="assets/css/responsive.css" rel="stylesheet" type="text/css"/>
 <link href="assets/css/custom-icon-set.css" rel="stylesheet" type="text/css"/>
+<link href="assets/css/custom.css" rel="stylesheet" type="text/css"/>
 <!-- END CSS TEMPLATE -->
 </head>
 <!-- END HEAD -->
@@ -28,7 +29,8 @@
         <div class="col-md-3">
         </div>
         <div class="col-md-6 well">
-          <h3 class="bold m-b-25">Welcome to Walmiki</h3>
+          <div class="mainLogo"></div>
+          <!--<h2 class="m-b-25">Welcome to Synapse</h2>-->
 		 <form id="login-form" class="login-form" action="index.html" method="post">
 		 <div class="row">
 		 <div class="form-group col-md-12">
