--- a/HTML/app-userlist.html
+++ b/HTML/app-userlist.html
@@ -18,6 +18,7 @@
 <link href="assets/css/style.css" rel="stylesheet" type="text/css"/>
 <link href="assets/css/responsive.css" rel="stylesheet" type="text/css"/>
 <link href="assets/css/custom-icon-set.css" rel="stylesheet" type="text/css"/>
+<link href="assets/css/custom.css" rel="stylesheet" type="text/css"/>
 <!-- END CSS TEMPLATE -->
 </head>
 <!-- END HEAD -->
@@ -27,7 +28,7 @@
   <div class="row login-container">  
         <div class="col-md-3">
         </div>
-        <div class="col-md-6">
+        <!--<div class="col-md-6">
           <div class="tiles white">
                   <div class="tiles-body">
                     <h3 class="bold m-b-25">Choose an Account</h3>
@@ -61,6 +62,42 @@
                     </div>
                   </div>
                 </div>
+        </div>-->
+        <div class="col-md-6">
+          <div class="well">
+          <div class="mainLogo"></div>
+          <!--<h2>Sign in to <span class="schoolName">School Name</span></h2>-->
+           <h3 class="text-center m-b-25">Choose an Account</h3>
+            <div class="notification-messages info">
+              <div class="message-wrapper">
+                <h4 class="bold"> <a href="#">David Nester</a></h4>
+              </div>
+              <div class="pull-right p-t-15"> <i class="fa fa-chevron-right"></i> </div>
+            </div>
+            <div class="notification-messages info">
+              <div class="message-wrapper">
+                <h4 class="bold"> <a href="#">Peter James</a></h4>
+              </div>
+              <div class="pull-right p-t-15"> <i class="fa fa-chevron-right"></i> </div>
+            </div>
+            <div class="notification-messages info">
+              <div class="message-wrapper">
+                <h4 class="bold"> <a href="#">Bob Smith</a></h4>
+              </div>
+              <div class="pull-right p-t-15"> <i class="fa fa-chevron-right"></i> 
+              </div>
+            </div>
+            <div class="row m-t-25">
+              <div class="col-sm-6 m-b-10">
+                <button type="button" class="btn btn-primary btn-block "><i class="fa fa-plus"></i> Add an Account</button>
+              </div> 
+              <div class="col-sm-6 m-b-10">
+                <button type="button" class="btn btn-danger btn-block"><i class="fa fa-trash-o"></i> Delete an Account</button>
+              </div>
+            </div>
+          </div>
+          <div class="text-center"><small>Powered by:</small></div>
+          <div class="smallLogo"></div>
         </div>
         <div class="col-md-3">
         </div>
