content module edits

--- a/HTML/app-userlist.html
+++ b/HTML/app-userlist.html
@@ -65,7 +65,7 @@
         </div>-->
         <div class="col-md-6">
           <div class="well">
-          <div class="mainLogo"></div>
+          <div class="mainLogo"><img src="assets/img/logo-synapse.png"></div>
           <!--<h2>Sign in to <span class="schoolName">School Name</span></h2>-->
            <h3 class="text-center m-b-25">Choose an Account</h3>
             <div class="notification-messages info">
