--- a/HTML/app-login.html
+++ b/HTML/app-login.html
@@ -29,7 +29,7 @@
         <div class="col-md-3">
         </div>
         <div class="col-md-6 well">
-          <div class="mainLogo"></div>
+          <div class="mainLogo"><img src="assets/img/logo-synapse.png"></div>
           <!--<h2 class="m-b-25">Welcome to Synapse</h2>-->
 		 <form id="login-form" class="login-form" action="index.html" method="post">
 		 <div class="row">
