--- a/HTML/add-question_question-properties.html
+++ b/HTML/add-question_question-properties.html
@@ -544,6 +544,10 @@
 				</div>
 
 				<div class="dock tiles">
+
+					<div class="builder_actions">
+						<button type="button" class="btn btn-success btn-cons2"><i class="fa fa-check"></i> Save</button> <button type="button" class="btn btn-success btn-cons2"><i class="fa fa-eye"></i> Preview</button>
+					</div>
 					
 					<div class="tiles green">
 					  <div class="tiles-head">
