--- a/wp-content/themes/walnut/walnut/index-app.html
+++ b/wp-content/themes/walnut/walnut/index-app.html
@@ -27,7 +27,10 @@
 
 	<!-- END CSS TEMPLATE -->
 
+	<link href="/dev/css/TimeCircles.css" rel="stylesheet" type="text/css">
+
 	<link href="/dev/css/select2.css" rel="stylesheet" type="text/css"/>
+	<link href="/dev/css/selectordie.css" rel="stylesheet" type="text/css"/>
 
 	<!-- VIDEO -->
 	<link href="/dev/css/video-js.css" rel="stylesheet" type="text/css">
@@ -54,8 +57,8 @@
 		<div id="dialog-region"></div>
 	</div>
 
-<div id="dialog-region"></div>
-<div id="login-region"></div>
+<!-- <div id="dialog-region"></div>
+<div id="login-region"></div> -->
 
 <script type="text/javascript" data-main="/dev/js/walnut-main" src="/dev/js/plugins/require.js"></script>
 <script type="text/javascript" data-main="/dev/js/walnut-main" src="/dev/js/plugins/walnutapp-global.js"></script>
