uncommitted changes for mobile select box testing

--- a/HTML/create-options.html
+++ b/HTML/create-options.html
@@ -306,17 +306,17 @@
 			<div class="row">
 				<div class="col-sm-4">
 					<div class="tiles white text-center">
-	                	<a href="#" class="heading p-t-40 p-b-40"> Teacher Question </a>   
+	                	<a href="#" class="heading p-t-65 p-b-65 animated bounceIn"> Teacher Question </a>   
 	           	 	</div>
 	        	</div>
 				<div class="col-sm-4">
 					<div class="tiles white text-center">
-	                	<a href="#" class="heading p-t-40 p-b-40"> Student Question </a>   
+	                	<a href="#" class="heading p-t-65 p-b-65 animated bounceIn"> Student Question </a>   
 	           	 	</div>
 	           	</div>
 				<div class="col-sm-4">
 					<div class="tiles white text-center">
-	                	<a href="#" class="heading p-t-40 p-b-40"> Content </a>   
+	                	<a href="#" class="heading p-t-65 p-b-65 animated bounceIn"> Content </a>   
 	           	 	</div>
 	           	</div>
 			</div>
