--- a/wp-content/themes/walnut/walnut/index-app.html
+++ b/wp-content/themes/walnut/walnut/index-app.html
@@ -1,66 +1,57 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Walnut Learn</title>
-	<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
-	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-	<meta content="" name="description" />
-	<meta content="" name="author" />
-
-	<!-- NEED TO WORK ON -->
-	<link href="/dev/css/jquery.sidr.light.css" rel="stylesheet" type="text/css" media="screen"/>
-	<link href="/dev/css/bootstrap-theme.css" rel="stylesheet" type="text/css"/>
-	<!-- BEGIN CORE CSS FRAMEWORK -->
-	<link href="/dev/css/bootstrap.min.css" rel="stylesheet" type="text/css">
-	<link href="/dev/css/font-awesome.css" rel="stylesheet" type="text/css">
-	<link href="/dev/css/animate.min.css" rel="stylesheet" type="text/css">
-	<!-- END CORE CSS FRAMEWORK -->
-
-	<!-- BEGIN CSS TEMPLATE -->
-	<link href="/dev/css/style.css" rel="stylesheet" type="text/css">
-	<link href="/dev/css/responsive.css" rel="stylesheet" type="text/css">
-	<link href="/dev/css/custom-icon-set.css" rel="stylesheet" type="text/css">
-	<link href="/dev/css/custom.css" rel="stylesheet" type="text/css"/>
-	<link href="/dev/css/jquery.dataTables.css" rel="stylesheet" type="text/css"/>
-	
-
-	<!-- END CSS TEMPLATE -->
-
-	<link href="/dev/css/TimeCircles.css" rel="stylesheet" type="text/css">
-
-	<link href="/dev/css/select2.css" rel="stylesheet" type="text/css"/>
-	<link href="/dev/css/selectordie.css" rel="stylesheet" type="text/css"/>
-
-	<!-- VIDEO -->
-	<link href="/dev/css/video-js.css" rel="stylesheet" type="text/css">
+	<head>
+		<title>Walnut Learn</title>
+		<meta http-equiv="content-type" content="text/html;charset=UTF-8" />
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+		<meta content="" name="description" />
+		<meta content="" name="author" />
+		<link href="/dev/css/select2.css" rel="stylesheet" type="text/css"/>
+		<link href="/dev/css/selectordie.css" rel="stylesheet" type="text/css"/>
+		<link href="/dev/css/TimeCircles.css" rel="stylesheet" type="text/css">
 
 
+		<link href="/dev/css/datepicker.css" rel="stylesheet" type="text/css"/>
+        <link href="/dev/css/bootstrap-timepicker.css" rel="stylesheet" type="text/css"/>
+		<link href="/dev/css/jquery.sidr.light.css" rel="stylesheet" type="text/css" media="screen"/>
+		
+		<!-- BEGIN CORE CSS FRAMEWORK -->
+		<link href="/dev/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+		<link href="/dev/css/bootstrap-theme.css" rel="stylesheet" type="text/css"/>
+		<link href="/dev/css/font-awesome.css" rel="stylesheet" type="text/css">
+		<link href="/dev/css/animate.min.css" rel="stylesheet" type="text/css">
+		<!-- END CORE CSS FRAMEWORK -->
 
-</head>
-<body class="">
 
-<div id="site_main_container" class="showAll">
-            <div>
-                <div id="header-region"></div>
-                <div class="page-container row-fluid">
-                    <div id="left-nav-region"></div>
-                    <div class="page-content">
-                        <div class="content">
-                            <div id="login-region"></div>
-                            <div id="breadcrumb-region"></div>
-                            <div id="main-content-region"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-		<div id="dialog-region"></div>
-	</div>
+		<!-- BEGIN CSS TEMPLATE -->
+		<link href="/dev/css/style.css" rel="stylesheet" type="text/css">
+		<link href="/dev/css/responsive.css" rel="stylesheet" type="text/css">
+		<link href="/dev/css/custom-icon-set.css" rel="stylesheet" type="text/css">
+		<link href="/dev/css/custom.css" rel="stylesheet" type="text/css"/>
+		<!-- END CSS TEMPLATE -->
 
-<!-- <div id="dialog-region"></div>
-<div id="login-region"></div> -->
+	</head>
+	<body class="">
 
-<script type="text/javascript" data-main="/dev/js/walnut-main" src="/dev/js/plugins/require.js"></script>
-<script type="text/javascript" data-main="/dev/js/walnut-main" src="/dev/js/plugins/walnutapp-global.js"></script>
-</body>
+	<div id="site_main_container" class="showAll">
+	            <div>
+	                <div id="header-region"></div>
+	                <div class="page-container row-fluid">
+	                    <div id="left-nav-region"></div>
+	                    <div class="page-content">
+	                        <div class="content">
+	                            <div id="login-region"></div>
+	                            <div id="breadcrumb-region"></div>
+	                            <div id="main-content-region"></div>
+	                        </div>
+	                    </div>
+	                </div>
+	            </div>
+			<div id="dialog-region"></div>
+		</div>
+
+	<script type="text/javascript" data-main="/dev/js/walnut-main" src="/dev/js/plugins/require.js"></script>
+	<script type="text/javascript" data-main="/dev/js/walnut-main" src="/dev/js/plugins/walnutapp-global.js"></script>
+	</body>
 </html>
