sync screen updates

--- a/HTML/app-sync-old.html
+++ b/HTML/app-sync-old.html
@@ -33,9 +33,9 @@
 
                     <div class="row">
                       <div class="col-sm-6 b-grey b-r ">
-                        <h3 class="semi-bold text-center">Sync Download <span class="fa fa-download"></span></h3>
+                        <h3 class="semi-bold text-center">Sync Download <span class="fa fa-cloud-download"></span></h3>
                         <div class="row">
-                          <div class="col-sm-6 b-grey b-r">
+                          <div class="col-sm-6 b-grey b-r m-b-10">
                             <h4 class="semi-bold text-center no-margin p-t-20">Last Sync</h4>
                             <div class="">
                               <h2 class="m-b-0 semi-bold text-center text-success">21/06/14</h2>
@@ -43,22 +43,21 @@
                             </div>
                           </div>
 
-                          <div class="col-sm-6 text-center">
-                            <button type="button" class="btn btn-success btn-sm btn-small btn-block m-t-50"><i class="fa fa-eye"></i>&nbsp;&nbsp;<span class="bold">View last 5 downloads</span></button>
+                          <div class="col-sm-6">
+                            <h4 class="semi-bold text-center no-margin p-t-20">Records to be synced</h4>
+                            <div class="">
+                              <h2 class="m-b-0 semi-bold text-center text-error animate-number" data-value="423" data-animation-duration="1000">423</h2>
+                              <h5 class="m-t-0 text-center text-error">records</h5>
+                            </div>
                           </div>
                         </div>
-                        <button type="button" class="btn btn-primary btn-block m-t-10"> <span class="bold"><span class="fa fa-refresh"></span> Sync</span></button>
-
-                        <div class="alert alert-error m-t-10 m-b-0 text-center semi-bold animated bounceIn">
-                          <span class="fa fa-exclamation-triangle"></span>&nbsp;&nbsp;No Internet Connection
-                        </div>
-
+                        <button type="button" class="btn btn-primary btn-block m-t-10"> <span class="bold"><span class="fa fa-refresh"></span> Start Sync</span></button>
                       </div>
 
                       <div class="col-sm-6">
-                        <h3 class="semi-bold text-center">Sync Upload <span class="fa fa-upload"></span></h3>
+                        <h3 class="semi-bold text-center">Sync Upload <span class="fa fa-cloud-upload"></span></h3>
                         <div class="row">
-                          <div class="col-sm-6 b-grey b-r">
+                          <div class="col-sm-6 b-grey b-r m-b-10">
                             <h4 class="semi-bold text-center no-margin p-t-20">Last Sync</h4>
                             <div class="">
                               <h2 class="m-b-0 semi-bold text-center text-success">21/06/14</h2>
@@ -67,16 +66,15 @@
                           </div>
 
                           <div class="col-sm-6 b-grey text-center">
-                            <button type="button" class="btn btn-success btn-block btn-sm btn-small m-t-50"><i class="fa fa-eye"></i>&nbsp;&nbsp;<span class="bold">View last 5 uploads</span></button>
-                            <h5 class="m-t-10 bold text-center text-error">23 records to be synced</h5>
+                            <h4 class="semi-bold text-center no-margin p-t-20">Records to be synced</h4>
+                            <div class="">
+                              <h2 class="m-b-0 semi-bold text-center text-error animate-number" data-value="423" data-animation-duration="1000">423</h2>
+                              <h5 class="m-t-0 text-center text-error">records</h5>
+                            </div>
+                            <!-- <button type="button" class="btn btn-success btn-block m-t-50"><i class="fa fa-eye"></i>&nbsp;&nbsp;<span class="">View last 5 uploads</span></button> -->
                           </div>
                         </div>
-                        <button type="button" class="btn btn-primary btn-block m-t-10"> <span class="bold"><span class="fa fa-refresh"></span> Sync</span></button>
-
-                        <div class="alert alert-error m-t-10 m-b-0 text-center semi-bold animated bounceIn">
-                          <span class="fa fa-exclamation-triangle"></span>&nbsp;&nbsp;No Internet Connection
-                        </div>
-
+                        <button type="button" class="btn btn-primary btn-block m-t-10"> <span class="bold"><span class="fa fa-refresh"></span> Start Sync</span></button>
                       </div>
                     </div>
 
