--- a/HTML/app-sync2.html
+++ b/HTML/app-sync2.html
@@ -33,9 +33,9 @@
 
                     <div class="row">
                       <div class="col-sm-6 b-grey b-r ">
-                        <h3 class="semi-bold text-center">Sync Download <span class="fa fa-cloud-download"></span></h3>
+                        <h3 class="semi-bold text-center">Sync Download <span class="fa fa-download"></span></h3>
                         <div class="row">
-                          <div class="col-sm-6 b-grey b-r m-b-10">
+                          <div class="col-sm-6 b-grey b-r">
                             <h4 class="semi-bold text-center no-margin p-t-20">Last Sync</h4>
                             <div class="">
                               <h2 class="m-b-0 semi-bold text-center text-success">21/06/14</h2>
@@ -43,21 +43,27 @@
                             </div>
                           </div>
 
-                          <div class="col-sm-6">
-                            <h4 class="semi-bold text-center no-margin p-t-20">Records to be synced</h4>
-                            <div class="">
+                          <div class="col-sm-6 text-center">
+                            <!-- <h4 class="semi-bold text-center b-grey b-b no-margin p-t-20 p-b-10">Records to be synced</h4>
+                            <div class="b-grey b-b">
                               <h2 class="m-b-0 semi-bold text-center text-error animate-number" data-value="423" data-animation-duration="1000">423</h2>
                               <h5 class="m-t-0 text-center text-error">records</h5>
-                            </div>
+                            </div> -->
+                            <p>23/5/2014 @ 05:29pm</p>
+                            <p>23/5/2014 @ 05:29pm</p>
+                            <p>23/5/2014 @ 05:29pm</p>
+                            <p>23/5/2014 @ 05:29pm</p>
+                            <p>23/5/2014 @ 05:29pm</p>
+                            <button type="button" class="btn btn-white btn-block btn-xs btn-mini">Close</button>
                           </div>
                         </div>
-                        <button type="button" class="btn btn-primary btn-block m-t-10"> <span class="bold"><span class="fa fa-refresh"></span> Start Sync</span></button>
+                        <button type="button" class="btn btn-primary btn-block m-t-10"> <span class="bold"><span class="fa fa-refresh"></span> Sync</span></button>
                       </div>
 
                       <div class="col-sm-6">
-                        <h3 class="semi-bold text-center">Sync Upload <span class="fa fa-cloud-upload"></span></h3>
+                        <h3 class="semi-bold text-center">Sync Upload <span class="fa fa-upload"></span></h3>
                         <div class="row">
-                          <div class="col-sm-6 b-grey b-r m-b-10">
+                          <div class="col-sm-6 b-grey b-r">
                             <h4 class="semi-bold text-center no-margin p-t-20">Last Sync</h4>
                             <div class="">
                               <h2 class="m-b-0 semi-bold text-center text-success">21/06/14</h2>
@@ -66,15 +72,22 @@
                           </div>
 
                           <div class="col-sm-6 b-grey text-center">
-                            <h4 class="semi-bold text-center no-margin p-t-20">Records to be synced</h4>
-                            <div class="">
+                            <!-- <h4 class="semi-bold text-center b-grey b-b no-margin p-t-20 p-b-10">Records to be synced</h4>
+                            <div class="b-grey b-b">
                               <h2 class="m-b-0 semi-bold text-center text-error animate-number" data-value="423" data-animation-duration="1000">423</h2>
                               <h5 class="m-t-0 text-center text-error">records</h5>
-                            </div>
+                            </div> -->
                             <!-- <button type="button" class="btn btn-success btn-block m-t-50"><i class="fa fa-eye"></i>&nbsp;&nbsp;<span class="">View last 5 uploads</span></button> -->
+                            <p>23/5/2014 @ 05:29pm</p>
+                            <p>23/5/2014 @ 05:29pm</p>
+                            <p>23/5/2014 @ 05:29pm</p>
+                            <p>23/5/2014 @ 05:29pm</p>
+                            <p>23/5/2014 @ 05:29pm</p>
+                            <button type="button" class="btn btn-white btn-block btn-xs btn-mini">Close</button>
+                            
                           </div>
                         </div>
-                        <button type="button" class="btn btn-primary btn-block m-t-10"> <span class="bold"><span class="fa fa-refresh"></span> Start Sync</span></button>
+                        <button type="button" class="btn btn-primary btn-block m-t-10"> <span class="bold"><span class="fa fa-refresh"></span> Sync</span></button>
                       </div>
                     </div>
 
