--- a/HTML/app-sync3.html
+++ b/HTML/app-sync3.html
@@ -33,44 +33,46 @@
 
                     <div class="row">
                       <div class="col-sm-6 b-grey b-r ">
-                        <h3 class="semi-bold text-center">Sync Download <span class="fa fa-cloud-download"></span></h3>
+                        <h3 class="semi-bold text-center">Sync Download <span class="fa fa-download"></span></h3>
                         <div class="row">
                           <div class="col-sm-12 b-grey b-r m-b-10">
                             <h5 class="semi-bold text-center no-margin p-t-20">Get Files</h5>
                             <div class="">
                               <h5 class="m-t-5 semi-bold text-center text-success">Last Download: 13/05/2014 @ 08:36 PM</h5>
-                              <button type="button" class="btn btn-success btn-sm btn-small h-center"><span class="bold">Download Now</span></button>
+                              <button type="button" class="btn btn-success btn-sm btn-small h-center block"><span class="bold">Download Now</span></button>
                               <div class="progress progress-striped active progress-small h-center m-t-5">
                                 <div data-percentage="0%" style="width: 45%;" class="progress-bar progress-bar-success"></div>
                               </div>
                             </div>
                           </div>
-
                         </div>
-                        <button type="button" class="btn btn-primary btn-block m-t-10"> <span class="bold"><span class="fa fa-refresh"></span> Start Sync</span></button>
+
+                        <div class="row">
+                          <div class="col-sm-12 b-grey b-r m-b-10">
+                            <h5 class="semi-bold text-center no-margin p-t-20">Import Files</h5>
+                            <div class="">
+                              <h5 class="m-t-5 semi-bold text-center text-success">Last Import: 13/05/2014 @ 08:36 PM</h5>
+                              <button type="button" class="btn btn-success btn-sm btn-small h-center block"><span class="bold">Import Now</span></button>
+                              <div class="progress progress-striped active progress-small h-center m-t-5">
+                                <div data-percentage="0%" style="width: 45%;" class="progress-bar progress-bar-success"></div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
+
                       </div>
 
                       <div class="col-sm-6">
-                        <h3 class="semi-bold text-center">Sync Upload <span class="fa fa-cloud-upload"></span></h3>
+                        <h3 class="semi-bold text-center">Sync Upload <span class="fa fa-upload"></span></h3>
                         <div class="row">
-                          <div class="col-sm-6 b-grey b-r m-b-10">
-                            <h4 class="semi-bold text-center no-margin p-t-20">Last Sync</h4>
-                            <div class="">
-                              <h2 class="m-b-0 semi-bold text-center text-success">21/06/14</h2>
-                              <h5 class="m-t-0 text-center text-success">08:36 PM</h5>
+                            <div class="m-t-55">
+                              <h5 class="semi-bold text-center no-margin p-t-20 ">Upload Progress</h5>
+                              <div class="progress progress-striped active progress-small h-center m-t-10">
+                                <div data-percentage="0%" style="width: 45%;" class="progress-bar progress-bar-success"></div>
+                              </div>
                             </div>
-                          </div>
-
-                          <div class="col-sm-6 b-grey text-center">
-                            <h4 class="semi-bold text-center no-margin p-t-20">Records to be synced</h4>
-                            <div class="">
-                              <h2 class="m-b-0 semi-bold text-center text-error animate-number" data-value="423" data-animation-duration="1000">423</h2>
-                              <h5 class="m-t-0 text-center text-error">records</h5>
-                            </div>
-                            <!-- <button type="button" class="btn btn-success btn-block m-t-50"><i class="fa fa-eye"></i>&nbsp;&nbsp;<span class="">View last 5 uploads</span></button> -->
                           </div>
                         </div>
-                        <button type="button" class="btn btn-primary btn-block m-t-10"> <span class="bold"><span class="fa fa-refresh"></span> Start Sync</span></button>
                       </div>
                     </div>
 
