content creator options bar style changes, fib add blank styles, media manager save button text change

--- a/HTML/add-question.html
+++ b/HTML/add-question.html
@@ -584,10 +584,21 @@
 										        <option value="2">2</option>
 										    </select>
 
-										    <div class="checkbox check-success">
+							<div class="m-b-10">
+								<div class="b-b b-grey m-b-5 m-t-10 p-b-5 bold">Add Blanks</div>No. of blanks <select class="blanks">
+							        <option value="1">1</option>
+							        <option value="2">2</option>
+							        <option value="3">3</option>
+							        <option value="4">4</option>
+							        <option value="5">5</option>
+							    </select>
+								<button type="button" class="btn btn-primary btn-sm btn-small"><span class="fa fa-plus"></span> Add</button>
+							</div>
+
+								<div class="checkbox check-success">
 			                      <input id="checkbox3" type="checkbox" value="1">
 			                      <label for="checkbox3">Set Transparent</label>
-			                  </div>
+			                  	</div>
 
 			               	</div>
 			              </div>
