--- a/wp-content/themes/walnut/walnut/index-app.html
+++ b/wp-content/themes/walnut/walnut/index-app.html
@@ -9,6 +9,7 @@
 		<meta content="" name="author" />
 		<link href="/dev/css/select2.css" rel="stylesheet" type="text/css"/>
 		<link href="/dev/css/TimeCircles.css" rel="stylesheet" type="text/css">
+		<link href="/dev/css/app.css" rel="stylesheet" type="text/css"/>
 
 
 		<link href="/dev/css/datepicker.css" rel="stylesheet" type="text/css"/>
@@ -29,6 +30,7 @@
 		<link href="/dev/css/custom-icon-set.css" rel="stylesheet" type="text/css">
 		<link href="/dev/css/custom.css" rel="stylesheet" type="text/css"/>
 		<!-- END CSS TEMPLATE -->
+		
 
 	</head>
 	<body class="">
