header changes, student alphabetic filtering changes

--- a/HTML/app-sync3.html
+++ b/HTML/app-sync3.html
@@ -52,7 +52,7 @@
                             <h5 class="semi-bold text-center no-margin p-t-20">Import Files</h5>
                             <div class="">
                               <h5 class="m-t-5 semi-bold text-center text-success">Last Import: 13/05/2014 @ 08:36 PM</h5>
-                              <button type="button" class="btn btn-success btn-sm btn-small h-center block"><span class="bold">Import Now</span></button>
+                              <button type="button" class="btn disabled btn-sm btn-small h-center block"><span class="bold">Import Now</span></button>
                               <div class="progress progress-striped active progress-small h-center m-t-5">
                                 <div data-percentage="0%" style="width: 45%;" class="progress-bar progress-bar-success"></div>
                               </div>
