--- a/HTML/miki-single.html
+++ b/HTML/miki-single.html
@@ -582,6 +582,78 @@
 				                </div>
 				            </div>
 						</div>
+						<div class="col-sm-3 m-b-20">
+							<div class="row single tiles white no-margin">    
+				                <div class="col-md-8 col-xs-8 no-padding">
+				                  <div class="text-center">
+				                    <h4 class="text-primary no-margin p-t-20 p-b-20 p-l-5 p-r-5"><span class="semi-bold">Lewis</span> Doe</h4>
+				                    <div class="clearfix"></div>
+				                  </div>
+				                </div>
+								 <div class="col-md-4 col-xs-4 no-padding">
+				                  <div class="tiles green active">
+				                  	<div class="user-profile-pic text-left m-t-0 p-t-10"> 
+									<img data-src-retina="assets/img/profiles/avatar2x.jpg" data-src="assets/img/profiles/avatar.jpg" src="assets/img/profiles/avatar.jpg" alt="">
+								  </div>
+				                    <div class="bold text-white text-center p-t-5 p-b-5"><i class="fa fa-check-circle"></i></div>
+				                  </div>
+				                </div>
+				            </div>
+						</div>
+						<div class="col-sm-3 m-b-20">
+							<div class="row single tiles white no-margin">    
+				                <div class="col-md-8 col-xs-8 no-padding">
+				                  <div class="text-center">
+				                    <h4 class="text-primary no-margin p-t-20 p-b-20 p-l-5 p-r-5"><span class="semi-bold">George</span> Clark</h4>
+				                    <div class="clearfix"></div>
+				                  </div>
+				                </div>
+								 <div class="col-md-4 col-xs-4 no-padding">
+				                  <div class="tiles default active">
+				                  	<div class="user-profile-pic text-left m-t-0 p-t-10"> 
+									<img data-src-retina="assets/img/profiles/avatar2x.jpg" data-src="assets/img/profiles/avatar.jpg" src="assets/img/profiles/avatar.jpg" alt="">
+								  </div>
+				                    <div class="bold text-white text-center p-t-5 p-b-5"><i class="fa fa-minus-circle"></i></div>
+				                  </div>
+				                </div>
+				            </div>
+						</div>
+						<div class="col-sm-3 m-b-20">
+							<div class="row single tiles white no-margin">    
+				                <div class="col-md-8 col-xs-8 no-padding">
+				                  <div class="text-center">
+				                    <h4 class="text-primary no-margin p-t-20 p-b-20 p-l-5 p-r-5"><span class="semi-bold">Frank</span> Ross</h4>
+				                    <div class="clearfix"></div>
+				                  </div>
+				                </div>
+								 <div class="col-md-4 col-xs-4 no-padding">
+				                  <div class="tiles red active">
+				                  	<div class="user-profile-pic text-left m-t-0 p-t-10"> 
+									<img data-src-retina="assets/img/profiles/avatar2x.jpg" data-src="assets/img/profiles/avatar.jpg" src="assets/img/profiles/avatar.jpg" alt="">
+								  </div>
+				                    <div class="bold text-white text-center p-t-5 p-b-5"><i class="fa fa-times-circle"></i></div>
+				                  </div>
+				                </div>
+				            </div>
+						</div>
+						<div class="col-sm-3 m-b-20">
+							<div class="row single tiles white no-margin">    
+				                <div class="col-md-8 col-xs-8 no-padding">
+				                  <div class="text-center">
+				                    <h4 class="text-primary no-margin p-t-20 p-b-20 p-l-5 p-r-5"><span class="semi-bold">Kurt</span>  Rose</h4>
+				                    <div class="clearfix"></div>
+				                  </div>
+				                </div>
+								 <div class="col-md-4 col-xs-4 no-padding">
+				                  <div class="tiles green active">
+				                  	<div class="user-profile-pic text-left m-t-0 p-t-10"> 
+									<img data-src-retina="assets/img/profiles/avatar2x.jpg" data-src="assets/img/profiles/avatar.jpg" src="assets/img/profiles/avatar.jpg" alt="">
+								  </div>
+				                    <div class="bold text-white text-center p-t-5 p-b-5"><i class="fa fa-check-circle"></i></div>
+				                  </div>
+				                </div>
+				            </div>
+						</div>
 					</div>
 				</div>
 
