sync upload messages added

--- a/HTML/app-sync3.html
+++ b/HTML/app-sync3.html
@@ -71,6 +71,8 @@
                             <div class="">
                               <button type="button" class="btn btn-success h-center block"><span class="bold">Generate Now</span></button>
                               <img src="assets/img/loader.gif" class="h-center block m-t-5" height="20">
+                              <h5 class="m-t-5 semi-bold text-center text-success">File Successfully Generated</h5>
+                              <h5 class="m-t-5 semi-bold text-center text-error">An Error Occurred</h5>
                             </div>
                           </div>
                         </div>
