Fixed app sync bug, data not getting imported.

--- a/wp-content/themes/walnut/walnut/index.html
+++ b/wp-content/themes/walnut/walnut/index.html
@@ -10,6 +10,8 @@
 		<link href="/dev/css/select2.css" rel="stylesheet" type="text/css"/>
 		<link href="/dev/css/TimeCircles.css" rel="stylesheet" type="text/css">
 		<link href="/dev/css/app.css" rel="stylesheet" type="text/css"/>
+		<link href="/dev/css/listnav.css" rel="stylesheet" type="text/css"/>
+		<link href="/dev/css/panzer.css" rel="stylesheet" type="text/css"/>
 
 
 		<link href="/dev/css/datepicker.css" rel="stylesheet" type="text/css"/>
