--- a/HTML/quiz-create.html
+++ b/HTML/quiz-create.html
@@ -689,7 +689,7 @@
 
 			</div>
 			
-			<div class="row">	
+			<div class="">	
 				<div id="myCanvas-miki" class="col-md-10 ">
 					<ul class="cbp_tmtimeline">
 				        <li class="sortable setGroup">
