builder padding fix, take quiz single view

--- a/HTML/quiz-create.html
+++ b/HTML/quiz-create.html
@@ -390,23 +390,31 @@
 							<div class="col-md-4">
 								<div class="margin-bottom-20 ">
 									<label class="form-label">Total Marks</label>
-									<input id="" name="totalTime" class="disabled pull-left" placeholder="0" type="text" disabled="disabled">
+									<input id="" name="totalTime" class="disabled" placeholder="0" type="text" disabled="disabled">
 								</div>
 							</div>
 							<div class="col-md-4">
 							    <div class="margin-bottom-20 ">
 							    	<label class="form-label">Total Time </label>
-									<input id="" name="totalTime" class="disabled pull-left" placeholder="0" type="text" disabled="disabled">
+									<input id="" name="totalTime" class="disabled" placeholder="0" type="text" disabled="disabled">
 								</div>
 							</div>
 							<div class="col-md-4">
 							    <div class="margin-bottom-20 ">
 									<label class="form-label">Total No. of Questions</label>
-									<input id="" name="noQstns" class="disabled pull-left" placeholder="0" type="text" disabled="disabled">
+									<input id="" name="noQstns" class="disabled" placeholder="0" type="text" disabled="disabled">
 								</div>
 							</div>											 
 						</div>
-						<div class="row m-t-10">
+						<div class="row ">
+							<div class="col-md-12">
+								<div class="margin-bottom-20 ">
+									<label class="form-label">Quiz Instructions</label>
+									<input id="" name="totalTime" class="form-control" placeholder="Rich Text Editor will come here" type="text"">
+								</div>
+							</div>											 
+						</div>
+						<div class="row">
 							<div class="col-md-12">
 								<div data-toggle="collapse" id="accordion" class="panel-group">
 								  <div class="panel panel-default">
