--- a/HTML/quiz-summary.html
+++ b/HTML/quiz-summary.html
@@ -292,9 +292,6 @@
 				<div class="tiles white grid simple vertical green">
 					<div class="grid-title no-border">
 						<h4 class="">Quiz <span class="bold">ABC</span></h4>
-						<div class="tools">
-							<a href="javascript:;" class="collapse"></a>
-						</div>
 					</div>
 					<div class="grid-body no-border" style="overflow: hidden; display: block;">
 						<div class="row ">
@@ -318,7 +315,13 @@
 									20
 									<h4 class="text-success semi-bold no-margin inline">(You scored: <span class="bold">18</span>)</h4>
 								</div>
-							</div>												 
+							</div>											 
+						</div>
+						<div class="row">
+							<div class="col-md-12">
+								<label class="form-label">Quiz taken on:</label>
+								<span class="text-success bold">12/05/2014</span>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -358,7 +361,7 @@
 					                </div>
 					                <div class="clearfix"></div>
 					              </div>
-					              <div class="text-error qstnStatus p-t-10"><i class="fa fa-times"></i> Wrong
+					              <div class="text-error qstnStatus p-t-10 text-right"><i class="fa fa-times"></i> Wrong
 					              	<div>
 					              		<label class="form-label small-text text-grey inline">Time Taken: <span class="bold">12m 15s</span></label></div>
 					             	</div>
@@ -371,7 +374,33 @@
 				                </div>
 				                <div class="clearfix"></div>
 				              </div>
-				              <div class="qstnStatus p-t-10"><i class="fa fa-check"></i> Correct
+				              <div class="qstnStatus p-t-10 text-right"><i class="fa fa-check"></i> Correct
+				              	<div>
+				              		<label class="form-label small-text text-grey inline">Time Taken: <span class="bold">2m 48s</span></label></div>
+				             	</div>
+					        </li>
+					        <li>
+				              <div class="cbp_tmicon success animated bounceIn"> <i class="fa fa-question"></i> </div>
+				              <div class="cbp_tmlabel view done">
+				                <div class="p-t-10 p-l-30 p-r-20 p-b-20 xs-p-r-10 xs-p-l-10 xs-p-t-5" >
+				                  <h4 class="inline m-b-5"><span class="text-success semi-bold "><a href="#">Works with Evernote Business: Capture, browse, search, and share Business Notes and Business Notebooks from your smartphone or tablet.</a></span> </h4>
+				                </div>
+				                <div class="clearfix"></div>
+				              </div>
+				              <div class="qstnStatus p-t-10 text-right"><i class="fa fa-check-square"></i> Partially<br>Correct
+				              	<div>
+				              		<label class="form-label small-text text-grey inline">Time Taken: <span class="bold">2m 48s</span></label></div>
+				             	</div>
+					        </li>
+					        <li>
+				              <div class="cbp_tmicon success animated bounceIn"> <i class="fa fa-question"></i> </div>
+				              <div class="cbp_tmlabel view done">
+				                <div class="p-t-10 p-l-30 p-r-20 p-b-20 xs-p-r-10 xs-p-l-10 xs-p-t-5" >
+				                  <h4 class="inline m-b-5"><span class="text-success semi-bold "><a href="#">Works with Evernote Business: Capture, browse, search, and share Business Notes and Business Notebooks from your smartphone or tablet.</a></span> </h4>
+				                </div>
+				                <div class="clearfix"></div>
+				              </div>
+				              <div class="text-error qstnStatus p-t-10 text-right"><i class="fa fa-share-square"></i> Skipped
 				              	<div>
 				              		<label class="form-label small-text text-grey inline">Time Taken: <span class="bold">2m 48s</span></label></div>
 				             	</div>
