--- a/HTML/quiz-single.html
+++ b/HTML/quiz-single.html
@@ -144,6 +144,25 @@
 		            		<div data-percentage="0%" style="width: 40%;" class="progress-bar progress-bar-warning" role="progressbar" aria-valuemin="0" aria-valuemax="100">4/10</div>
 		        		</div>
 	        		</div>
+	        		<div class="quizSteps">
+	        			<ul>
+						    <li><a href="#">1</a></li>
+						    <li><a href="#">2</a></li>
+						    <li><a href="#">3</a></li>
+						    <li><a href="#">4</a></li>
+						    <li><a href="#">5</a></li>
+						    <li><a href="#">6</a></li>
+						    <li><a href="#">7</a></li>
+						    <li><a href="#">8</a></li>
+						    <li><a href="#">9</a></li>
+						    <li><a href="#">10</a></li>
+						    <li><a href="#">11</a></li>
+						    <li><a href="#">12</a></li>
+						    <li><a href="#">13</a></li>
+						    <li><a href="#">14</a></li>
+						    <li><a href="#">15</a></li>
+						</ul>
+					</div>
 	        	</div>
 
 
