--- a/HTML/quiz-single.html
+++ b/HTML/quiz-single.html
@@ -146,11 +146,11 @@
 	        		</div>
 	        		<div class="quizSteps">
 	        			<ul>
-						    <li><a href="#">1</a></li>
-						    <li><a href="#">2</a></li>
+						    <li class="skip"><a href="#">1</a></li>
+						    <li class="right"><a href="#">2</a></li>
 						    <li><a href="#">3</a></li>
 						    <li><a href="#">4</a></li>
-						    <li><a href="#">5</a></li>
+						    <li class="wrong"><a href="#">5</a></li>
 						    <li><a href="#">6</a></li>
 						    <li><a href="#">7</a></li>
 						    <li><a href="#">8</a></li>
@@ -161,6 +161,7 @@
 						    <li><a href="#">13</a></li>
 						    <li><a href="#">14</a></li>
 						    <li><a href="#">15</a></li>
+						    <div class="clearfix"></div>
 						</ul>
 					</div>
 	        	</div>
